# public/docs/openapi.yaml
@@ -49,6 +49,29 @@ paths:
       tags:
         - Endpoints
       security: []
+  /api/problems-and-goals:
+    post:
+      summary: 'Create Problems and Goals'
+      operationId: createProblemsAndGoals
+      description: ''
+      parameters: []
+      responses: {  }
+      tags:
+        - 'Problems and Goals'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                transcriptId:
+                  type: integer
+                  description: 'Id of the transcript.'
+                  example: 13
+              required:
+                - transcriptId
+      security: []
   /api/project-summery:
     get:
       summary: 'Get Project Summery List'
@@ -59,12 +82,12 @@ paths:
           in: query
           name: page
           description: 'page number.'
-          example: 6
+          example: 10
           required: false
           schema:
             type: integer
             description: 'page number.'
-            example: 6
+            example: 10
       responses:
         200:
           description: ''
@@ -73,7 +96,7 @@ paths:
               schema:
                 type: object
                 example:
-                  current_page: 6
+                  current_page: 10
                   data: []
                   first_page_url: 'http://localhost:8000/api/project-summery?page=1'
                   from: null
@@ -81,7 +104,7 @@ paths:
                   last_page_url: 'http://localhost:8000/api/project-summery?page=1'
                   links:
                     -
-                      url: 'http://localhost:8000/api/project-summery?page=5'
+                      url: 'http://localhost:8000/api/project-summery?page=9'
                       label: '&laquo; Previous'
                       active: false
                     -
@@ -95,13 +118,13 @@ paths:
                   next_page_url: null
                   path: 'http://localhost:8000/api/project-summery'
                   per_page: 10
-                  prev_page_url: 'http://localhost:8000/api/project-summery?page=5'
+                  prev_page_url: 'http://localhost:8000/api/project-summery?page=9'
                   to: null
                   total: 1
                 properties:
                   current_page:
                     type: integer
-                    example: 6
+                    example: 10
                   data:
                     type: array
                     example: []
@@ -121,7 +144,7 @@ paths:
                     type: array
                     example:
                       -
-                        url: 'http://localhost:8000/api/project-summery?page=5'
+                        url: 'http://localhost:8000/api/project-summery?page=9'
                         label: '&laquo; Previous'
                         active: false
                       -
@@ -137,7 +160,7 @@ paths:
                       properties:
                         url:
                           type: string
-                          example: 'http://localhost:8000/api/project-summery?page=5'
+                          example: 'http://localhost:8000/api/project-summery?page=9'
                         label:
                           type: string
                           example: '&laquo; Previous'
@@ -155,7 +178,7 @@ paths:
                     example: 10
                   prev_page_url:
                     type: string
-                    example: 'http://localhost:8000/api/project-summery?page=5'
+                    example: 'http://localhost:8000/api/project-summery?page=9'
                   to:
                     type: string
                     example: null
@@ -183,23 +206,23 @@ paths:
                 transcriptText:
                   type: string
                   description: 'The text of the transcript.'
-                  example: tempora
+                  example: ipsum
                 projectName:
                   type: string
                   description: 'The name of the project.'
-                  example: dolores
+                  example: perspiciatis
                 clientPhone:
                   type: string
                   description: 'The phone number of the client.'
-                  example: eligendi
+                  example: libero
                 clientEmail:
                   type: string
                   description: 'The email of the client.'
-                  example: rippin.jonatan@example.org
+                  example: nathanial81@example.org
                 clientWebsite:
                   type: string
                   description: 'The website of the client.'
-                  example: inventore
+                  example: suscipit
               required:
                 - transcriptText
                 - projectName
@@ -248,7 +271,7 @@ paths:
                 summaryText:
                   type: integer
                   description: 'summaryText of the Project Summery.'
-                  example: 20
+                  example: 2
               required:
                 - summaryText
       security: []
@@ -275,10 +298,13 @@ paths:
             value: ''
           present:
             summary: 'When the value is present'
-            value: 3
+            value: 15
 tags:
   -
     name: Endpoints
+    description: ''
+  -
+    name: 'Problems and Goals'
     description: ''
   -
     name: 'Project Summery'
